--- a/jQuery-AJAX/jQuery发送AJAX请求.html
+++ b/jQuery-AJAX/jQuery发送AJAX请求.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>jQuery 发送 AJAX 请求</title>
-    <link crossorigin="anonymous" href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.0.2/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- crossorigin="anonymous" 跨元属性设置 向链接资源发送请求时 将不会携带当前域名的cookie -->
+    <link crossorigin="anonymous" href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.0.2/css/bootstrap.min.css"
+        rel="stylesheet">
+    <script crossorigin="anonymous" src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 
 <body>
@@ -18,8 +20,47 @@
         <button class="btn btn-info">通用型方法ajax</button>
     </div>
     <script>
-        $('button').eq(0).click(function(){
-            $.get('')
+        // GET请求
+        $('button').eq(0).click(function () {
+            $.get('http://127.0.0.1:8000/jquery-server', { a: 100, b: 200 }, function (data) {
+                console.log(data);
+            }, 'json')
+        });
+
+        // POST 请求
+        $('button').eq(1).click(function () {
+            $.post('http://127.0.0.1:8000/jquery-server', { a: 100, b: 200 }, function (data) {
+                console.log(data);
+            });
+        })
+
+        // 通用型方法ajax
+        $('button').eq(2).click(function () {
+            $.ajax({
+                // url
+                url: 'http://127.0.0.1:8000/jquery-server',
+                // 参数
+                data: { a: 100, b: 200 },
+                // 请求类型
+                type: 'GET',
+                // 响应体结果
+                dataType: 'json',
+                // 成功的回调
+                success: function (data) {
+                    console.log(data);
+                },
+                // 超时时间
+                timeout: 2000,
+                // 失败的回调
+                error: function () {
+                    console.log('出错啦!!!');
+                },
+                // 头信息
+                headers: {
+                    c: 300,
+                    d: 400
+                }
+            })
         })
     </script>
 </body>
